tools/architecture/validate-source-imports/tests/fixtures/invalid/tsconfig-alias-unresolved/src/index.ts
import { missing } from "@myapp/missing-module";
export const value = missing;
